add bf merge 26/11